k8s/asl-dev/deployment.yaml
# Service deployment yml file configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftp-background-deployment
  namespace: dev
  labels:
    app: sftp-background-deployment
spec:
  replicas: 2 # number of pods
  selector:
    matchLabels:
      app: sftp-background-deployment
  template:
    metadata:
      labels:
        app: sftp-background-deployment
    spec:
      containers:
        - name: docker-image-1
          image: gcr.io/clus-demo/docker-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sftp-background-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: sftp-background-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30101
